tests/miniJava/neg/000052_mutation.MiniJava
class java { . static void Main ( String [ ] java ) { { } } }
